/********************************************************************************
 * Copyright (c) 2026 Contributors to the Eclipse Foundation
 *
 * See the NOTICE file(s) distributed with this work for additional
 * information regarding copyright ownership.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Apache License Version 2.0 which is available at
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * SPDX-License-Identifier: Apache-2.0
 ********************************************************************************/
#ifndef SCORE_TIMESLAVE_CODE_GPTP_DETAILS_I_NETWORK_IDENTITY_H
#define SCORE_TIMESLAVE_CODE_GPTP_DETAILS_I_NETWORK_IDENTITY_H

#include "score/TimeSlave/code/gptp/details/ptp_types.h"

#include <string>

namespace score
{
namespace ts
{
namespace details
{

/// Interface for resolving the IEEE 1588 ClockIdentity from a network interface.
class INetworkIdentity
{
  public:
    virtual ~INetworkIdentity() noexcept = default;

    /// Resolve the ClockIdentity for @p iface_name. Returns true on success.
    virtual bool Resolve(const std::string& iface_name) = 0;

    /// Return the resolved identity. Valid only after a successful Resolve().
    virtual ClockIdentity GetClockIdentity() const = 0;
};

}  // namespace details
}  // namespace ts
}  // namespace score

#endif  // SCORE_TIMESLAVE_CODE_GPTP_DETAILS_I_NETWORK_IDENTITY_H
